--- a/listform.html
+++ b/listform.html
@@ -66,5 +66,6 @@
             <label>PASSWORD</label><br>
             <input type="password" name="PASSWORD" id=""><br><br>
             <button>LOGIN</button>
+        </form>    
     </body>
 </html>
