--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <u>valuemax</u>
         </h1>
         <ul>
-            <li><a href="hiremetable.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="microsoftform.html">About</a></li>
             <li><a href="listform.html">contact</a></li>
             <li><a href="form.html">service</a></li>
