--- a/borderass.html
+++ b/borderass.html
@@ -30,6 +30,8 @@
             <li><a href="listform.html">contact</a></li>
             <li><a href="form.html">service</a></li>
             <li><a href="borderass.html">Register</a></li>
+            <li><a href="draftass.html">Register</a></li>
+            <li><a href="hoverdisplay.html">Register</a></li>
         </ul>
         <p>
             why we needbest friends, because hey laugh at thesame stupid thing we do. <br>
