--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li><a href="listform.html">contact</a></li>
             <li><a href="form.html">service</a></li>
             <li><a href="borderass.html">Register</a></li>
+            <li><a href="draftass.html">Register</a></li>
+            <li><a href="hoverdisplay.html">Register</a></li>
         </ul>
         <h1>Hire Me!</h1>
         <p>
