--- a/form.html
+++ b/form.html
@@ -14,6 +14,8 @@
             <li><a href="listform.html">contact</a></li>
             <li><a href="form.html">service</a></li>
             <li><a href="borderass.html">Register</a></li>
+            <li><a href="draftass.html">Register</a></li>
+            <li><a href="hoverdisplay.html">Register</a></li>
         </ul>
         <form>
             <table>
