--- a/listform.html
+++ b/listform.html
@@ -21,6 +21,8 @@
             <li><a href="listform.html">contact</a></li>
             <li><a href="form.html">service</a></li>
             <li><a href="borderass.html">Register</a></li>
+            <li><a href="draftass.html">Register</a></li>
+            <li><a href="hoverdisplay.html">Register</a></li>
         </ul>
         <h1>Neasted List In HTML</h1>
         <ol>
