--- a/microsoftform.html
+++ b/microsoftform.html
@@ -51,6 +51,8 @@
         <li><a href="listform.html">contact</a></li>
         <li><a href="form.html">service</a></li>
         <li><a href="borderass.html">Register</a></li>
+        <li><a href="draftass.html">Register</a></li>
+        <li><a href="hoverdisplay.html">Register</a></li>
     </ul>
       <p>
           <h1>Microsoft Parent Ones and zeroes</h1> <br>
